syntax = "proto3";

package common.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/alexis871aa/microservices-rocket-factory/shared/pkg/proto/common/v1;common_v1";

/**
 * Сессия пользователя
 */
message Session {
  string uuid = 1;                          // UUID сессии
  google.protobuf.Timestamp created_at = 2; // Время создания
  google.protobuf.Timestamp updated_at = 3; // Время последнего обновления
  google.protobuf.Timestamp expires_at = 4; // Время истечения
}
